--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Lawrence Juma | WDD 130</title>
+    <meta name="description" content="This is Lawrence Juma's WDD 120 home page">
+    <meta name="author" content="Lawrence Juma">
 </head>
 <body>
     <header>
@@ -20,6 +22,11 @@
              I am ready to get the best out of it inorder to get the skills I need. I know I will only accomplish this by following
             through the course materials and making sure that I complete all the assignments. All the best to me.</p>
     </main>
+    <aside>
+        <h2>Nairobi</h2>
+        <img src="images/Nairobi.webp" alt="Nairobi city">
+        <p>Nairobi is the capital and largest city of Kenya. The name is derived from the Maasai phrase Enkare Nairobi, which translates to 'place of cool waters', a reference to the Nairobi River which flows through the city.</p>
+    </aside>
     <footer>
         <p>©️2025 ❄️ Lawrence Juma ❄️ Kakamega, Kenya</p>
     </footer>
