--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +9,49 @@
     <meta name="description" content="This is Lawrence Juma's WDD 120 home page">
     <meta name="author" content="Lawrence Juma">
 </head>
+
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com."> Linkedin</a>
+            <a href="https://facebook.com.">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Lawrence Juma</h1>
         <img src="images/profile.webp" alt="Hello, my name is Lawrence Juma" width="200">
-        <p>Hello, my name is Lawrence Juma and I am from Kenya. I am excited abouting taking this course, Web Fundamentals and
-             I am ready to get the best out of it inorder to get the skills I need. I know I will only accomplish this by following
+        <p>Hello, my name is Lawrence Juma and I am from Kenya. I am excited abouting taking this course, Web
+            Fundamentals and
+            I am ready to get the best out of it inorder to get the skills I need. I know I will only accomplish this by
+            following
             through the course materials and making sure that I complete all the assignments. All the best to me.</p>
+
+        <ul class="box">
+            <li><a href="https://newsroom.churchofjesuschrist.org/article/adelaide-australia-temple"
+                    target="_blank">adelaide-australia-temple</a>
+            </li>
+            <li><a href="https://newsroom.churchofjesuschrist.org/article/anchorage-alaska-temple"
+                    target="_blank">anchorage-alaska-temple</a>
+            </li>
+            <li><a href="https://newsroom.churchofjesuschrist.org/article/billings-montana-temple"
+                    target="_blank">billings-montana-temple</a>
+            </li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Nairobi</h2>
         <img src="images/Nairobi.webp" alt="Nairobi city">
-        <p>Nairobi is the capital and largest city of Kenya. The name is derived from the Maasai phrase Enkare Nairobi, which translates to 'place of cool waters', a reference to the Nairobi River which flows through the city.</p>
+        <p>Nairobi is the capital and largest city of Kenya. The name is derived from the Maasai phrase Enkare Nairobi,
+            which translates to 'place of cool waters', a reference to the Nairobi River which flows through the city.
+        </p>
     </aside>
     <footer>
         <p>©️2025 ❄️ Lawrence Juma ❄️ Kakamega, Kenya</p>
     </footer>
 </body>
+
+<!-- 22nd July 2025 -->
+
 </html>
