Rafting about us page enhancement

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,12 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
+
 </head>
 
 <body>
     <header>
         <img src="images/Logo.jpg" alt="Rafting Company Logo">
-        <nav>
+        <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About US</a>
             <a href="trips.html">Trips</a>
@@ -35,18 +36,39 @@
                     Temporibus quod facere accusamus dolor impedit rem unde maiores repellendus esse omnis.</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Quae itaque officia libero sint aliquam delectus ratione suscipit? Illo, consequuntur accusantium?</p>
+            <img src="images/history.webp" alt="history image">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt, omnis explicabo sit tempora totam praesentium dolorum officia dolor quas alias.</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/adventure_1.webp" alt="Adventure 1 image">
-            <img src="images/adventure_2.webp" alt="Adventure 2 image">
-            <img src="images/adventure_3.webp" alt="Adventure 3 image">
-            <img src="images/adventure_4.webp" alt="Adventure 4 image">
-            <img src="images/adventure_5.webp" alt="Adventure 5 image">
+            <div class="adventure-figures">
+                <figure>
+                    <img src="images/adventure_1.webp" alt="Adventure 1 image">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure_2.webp" alt="Adventure 2 image">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure_3.webp" alt="Adventure 3 image">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Happy_client.webp" alt="Adventure 4 image">
+                    <figcaption>Exciting Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure_5.webp" alt="Adventure 5 image">
+                    <figcaption>Water Rafts</figcaption>
+                </figure>
+            </div>
+
         </section>
     </main>
     <footer>
