--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <a href="https://facebook.com.">Facebook</a>
         </nav>
     </header>
-    <main>
+    <div class="grid">
+        <main>
         <h1>Lawrence Juma</h1>
         <img src="images/profile.webp" alt="Hello, my name is Lawrence Juma" width="200">
         <p>Hello, my name is Lawrence Juma and I am from Kenya. I am excited abouting taking this course, Web
@@ -39,14 +40,15 @@
                     target="_blank">billings-montana-temple</a>
             </li>
         </ul>
-    </main>
-    <aside class="box">
+        </main>
+        <aside class="box">
         <h2>Nairobi</h2>
         <img src="images/Nairobi.webp" alt="Nairobi city">
         <p>Nairobi is the capital and largest city of Kenya. The name is derived from the Maasai phrase Enkare Nairobi,
             which translates to 'place of cool waters', a reference to the Nairobi River which flows through the city.
         </p>
-    </aside>
+        </aside>
+    </div> 
     <footer>
         <p>©️2025 ❄️ Lawrence Juma ❄️ Kakamega, Kenya</p>
     </footer>
