--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About us</title>
     <meta name="description" content="This is About us page of the Rapids Rafting Site">
     <meta name="author" content="Lawrence Juma">
 
